fixed spacing for events page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -490,7 +490,7 @@ width: 50%;
 margin-top: 15px;
 display: flex;
 justify-content: center;
-align-items: center;
+align-items: flex-start;
 }
 
 .rtnbtn{
